@@ -33,7 +33,6 @@ comes with this distribution for details.
 - Alien::o2dll
 - Alien::Packages::Cygwin
 - Alien::patch
-- AnyEvent
 - AnyEvent::Finger
 - AnyEvent::FTP
 - AnyEvent::Git::Wrapper
@@ -49,16 +48,13 @@ comes with this distribution for details.
 - Archive::Libarchive::Any
 - Archive::Libarchive::FFI
 - Archive::Libarchive::XS
-- Authen::Simple
 - Authen::Simple::PlugAuth
 - autodie
 - Clustericious
 - Clustericious::Admin
-- Crypt::PasswdMD5
 - DBD::mysqlPP
 - DBD::PgPP
 - DBD::SQLite
-- DBI
 - Devel::StackTrace
 - Digest::MD5
 - Dist::Zilla::MintingProfile::Clustericious
@@ -85,14 +81,11 @@ comes with this distribution for details.
 - FFI::Platypus::Type::StringArray
 - FFI::TinyCC
 - FFI::Util
-- File::chdir
 - File::IgnoreReadonly
 - File::LibMagic::FFI
 - File::Listing
 - File::Listing::Ftpcopy
 - File::Touch
-- HTTP::Tiny
-- IPC::Run
 - JSON
 - JSON::XS
 - Lingua::Alphabet::Phonetic::LAPD
@@ -107,8 +100,6 @@ comes with this distribution for details.
 - Monkey::Patch
 - Moose
 - Net::DNS
-- Number::Bytes::Human
-- Perl::Critic
 - Photography::EV
 - PkgConfig
 - PlugAuth
