@@ -80,7 +80,7 @@ Log::Log4perl::Appender::TAP                   = 0.02
 Mojolicious::Plugin::Ident                     = 0.30
 Mojolicious::Plugin::TtRenderer                = 1.54
 Photography::EV                                = 0.06
-PkgConfig                                      = 0.08626
+PkgConfig                                      = 0.08726
 PlugAuth                                       = 0.29
 PlugAuth::Client::Tiny                         = 0.01
 PlugAuth::Plugin::AuthenSimple                 = 0.01
@@ -100,28 +100,21 @@ WebService::LiveJournal                        = 0.07
 Win32::Getppid                                 = 0.02
 Win32::Shortcut::Readlink                      = 0.02
 WWW::Bugzilla::BugTree                         = 0.03
-Yars                                           = 1.06
+Yars                                           = 1.07
 
-AnyEvent                                       = 0
 App::cpanminus                                 = 0
-Authen::Simple                                 = 0
 autodie                                        = 0
-Crypt::PasswdMD5                               = 0
 DBD::mysqlPP                                   = 0
 DBD::PgPP                                      = 0
 DBD::SQLite                                    = 0
-DBI                                            = 0
 Devel::StackTrace                              = 0
 Digest::MD5                                    = 0
 Dist::Zilla::Plugin::Meta::Dynamic::Config     = 0
 Dist::Zilla::Plugin::PPPort                    = 0
 EV                                             = 0
-File::chdir                                    = 0
 File::IgnoreReadonly                           = 0
 File::Listing                                  = 0
 File::Touch                                    = 0
-HTTP::Tiny                                     = 0
-IPC::Run                                       = 0
 JSON                                           = 0
 JSON::XS                                       = 0
 local::lib                                     = 0
@@ -129,12 +122,10 @@ Log::Log4perl                                  = 0
 ; Module::CoreList is in core, but in separate rpms
 Module::CoreList                               = 0
 Module::Which                                  = 0
-Mojolicious                                    = 4.29
+Mojolicious                                    = 5.80
 Monkey::Patch                                  = 0
 Moose                                          = 0
 Net::DNS                                       = 0
-Number::Bytes::Human                           = 0
-Perl::Critic                                   = 0
 Pod::Abstract                                  = 0
 
 ; core, but in separate rpms
