@@ -1,6 +1,16 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - updated my dists to latest
+  - rm AnyEvent
+  - rm Authen::Simple
+  - rm Crypt::PasswdMD5
+  - rm DBI
+  - rm File::chdir
+  - rm HTTP::Tiny
+  - rm IPC::Run
+  - rm Number::Bytes::Human
+  - rm Perl::Critic
 
 1.47      2015-02-18 20:04:36 -0500
   - updated my dists to latest
